fixed jumping navbar

--- a/public/styles.css
+++ b/public/styles.css
@@ -10,13 +10,13 @@ p {
   font-style: normal;
   font-weight: 300;
   line-height: 150%;
-  font-size: 24px;
+  font-size: 1.5rem;
   color: #56909e;
 }
 h1 {
   font-style: normal;
   font-weight: 600;
-  font-size: 96px;
+  font-size: 6rem;
   line-height: 125%;
   color: #56909e;
 
@@ -25,19 +25,20 @@ h2 {
   font-family: 'Montserrat';
   font-style: normal;
   font-weight: normal;
-  font-size: 64px;
+  font-size: 4rem;
   line-height: 125%;
   color: #56909e;
 }
 h3 {
   line-height: 100%
   font-weight: normal;
-  font-size: 36px;
+  font-size: 2.25rem;
   margin: 0;
   color: #56909e;
 }
 #top {
   grid-area: top;
+  padding: 2.5vh;
 }
 #left {
   grid-area: left;
